--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html ng-app='app'>
     <head>
         <meta charset="utf-8">
-
+        <link rel="stylesheet" href="animate/animate.css">
     </head>
     <body>
 
@@ -13,6 +13,7 @@
 
         <link rel="stylesheet" href="static/build/styles.css">
         <script type="text/javascript" src="static/build/bundle.js"></script>
+
 
         <!--route-provider-->
     </body>
